# CMakeTemplate

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  environment.cmake
Boost/: Link.cmake
CMakeMacros/Cuda/: CudaCreateTarget.cmake  Link.cmake
CMakeMacros/Environment/MachineFiles/: computerName
CMakeMacros/GMock/: Link.cmake
CMakeMacros/JsonCpp/: FindJsonCpp.cmake
CMakeMacros/Machinefiles/: Isildur  environment.cmake
CMakeMacros/VTK/: Link.cmake
CMakeMacros/fftw/: FindFftw.cmake  Link.cmake
CMakeMacros/general/: BuildTarget.cmake  BuildTargetUtilities.cmake  EndingsToCollect.cmake
Cuda/: CudaCreateTarget.cmake
Metis/: Link.cmake
cmake/Boost/: Link.cmake
cmake/Cuda/: CudaCreateTarget.cmake
cmake/GMock/: FindGMock.cmake  Link.cmake
cmake/JsonCpp/: FindJsonCpp.cmake  Link.cmake
cmake/Metis/: FindMetis.cmake  Link.cmake
cmake/OpenMP/: Link.cmake
cmake/VTK/: Link.cmake
examples/applications/: CMakeLists.txt
examples/applications/AllTestExample/: 3rdPartyLinking.cmake  CMakeLists.txt  CMakePackage.cmake
examples/applications/BoostExample/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
examples/applications/CSharpExample/: 3rdPartyLinking.cmake  CMakeLists.txt  CMakePackage.cmake  main.cs
examples/applications/CudaExample/: 3rdPartyLinking.cmake  CMakeLists.txt  CMakePackage.cmake  main.cu
examples/applications/FFTWExample/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
examples/applications/GMockExample/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
examples/applications/GitRevisionExample/: CMakeLists.txt  CMakePackage.cmake  buildInfo.cmake  buildInfo.h  main.cpp
examples/applications/GitRevisionExample/buildInfoInput/: buildInfo.in.cpp
examples/applications/JsonCppExample/: 3rdPartyLinking.cmake  CMakeLists.txt  alice.json  main.cpp
examples/applications/LibExample/: CMakeLists.txt  CMakePackage.cmake
examples/applications/LibExampleTest/: CMakeLists.txt  CMakePackage.cmake
examples/applications/MPIExample/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
examples/applications/MetisExample/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
examples/applications/OpenMPExample/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
examples/applications/QtExample/: 3rdPartyLinking.cmake  CMakeLists.txt  CMakePackage.cmake  ConsoleLogger.cpp  ConsoleLogger.h  main.cpp
examples/applications/VTKExample/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
examples/src/LibExample/: LibExample_EXPORT.h
examples/src/LibExample/ConsoleLogger/: ConsoleLogger.h  ConsoleLoggerTest.cpp  ConsoleLoggerTest.h
examples/src/QtGui/: QtGui_EXPORT.h
general/: FileUtilities.cmake
